kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__schema_recovery_3.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 138
expression: "crate::tests::parsing_expr_string(r#\"s?.a {a=1}\"#)"
---
Node {
    node: Selector(
        SelectorExpr {
            value: Node {
                node: Identifier(
                    Identifier {
                        names: [
                            "s",
                        ],
                        pos: [
                            Node {
                                node: (),
                                filename: "",
                                line: 1,
                                column: 0,
                                end_line: 1,
                                end_column: 1,
                            },
                        ],
                        pkgpath: "",
                        ctx: Load,
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 1,
            },
            attr: Node {
                node: Identifier {
                    names: [
                        "a",
                    ],
                    pos: [
                        Node {
                            node: (),
                            filename: "",
                            line: 1,
                            column: 3,
                            end_line: 1,
                            end_column: 4,
                        },
                    ],
                    pkgpath: "",
                    ctx: Load,
                },
                filename: "",
                line: 1,
                column: 3,
                end_line: 1,
                end_column: 4,
            },
            ctx: Load,
            has_question: true,
        },
    ),
    filename: "",
    line: 1,
    column: 1,
    end_line: 1,
    end_column: 4,
}

