kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__schema_stmt_recovery_30.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_module_string(r#\"\nschema A:\n    .\"#)"
---
Module {
    filename: "",
    doc: None,
    name: "",
    body: [
        Node {
            node: Schema(
                SchemaStmt {
                    doc: None,
                    name: Node {
                        node: "A",
                        filename: "",
                        line: 2,
                        column: 7,
                        end_line: 2,
                        end_column: 8,
                    },
                    parent_name: None,
                    for_host_name: None,
                    is_mixin: false,
                    is_protocol: false,
                    args: None,
                    mixins: [],
                    body: [
                        Node {
                            node: Expr(
                                ExprStmt {
                                    exprs: [
                                        Node {
                                            node: Selector(
                                                SelectorExpr {
                                                    value: Node {
                                                        node: Missing(
                                                            MissingExpr,
                                                        ),
                                                        filename: "",
                                                        line: 3,
                                                        column: 4,
                                                        end_line: 3,
                                                        end_column: 5,
                                                    },
                                                    attr: Node {
                                                        node: Identifier {
                                                            names: [
                                                                Node {
                                                                    node: "",
                                                                    filename: "",
                                                                    line: 3,
                                                                    column: 5,
                                                                    end_line: 3,
                                                                    end_column: 5,
                                                                },
                                                            ],
                                                            pkgpath: "",
                                                            ctx: Load,
                                                        },
                                                        filename: "",
                                                        line: 3,
                                                        column: 5,
                                                        end_line: 3,
                                                        end_column: 5,
                                                    },
                                                    ctx: Load,
                                                    has_question: false,
                                                },
                                            ),
                                            filename: "",
                                            line: 3,
                                            column: 4,
                                            end_line: 3,
                                            end_column: 5,
                                        },
                                    ],
                                },
                            ),
                            filename: "",
                            line: 3,
                            column: 4,
                            end_line: 3,
                            end_column: 5,
                        },
                    ],
                    decorators: [],
                    checks: [],
                    index_signature: None,
                },
            ),
            filename: "",
            line: 2,
            column: 0,
            end_line: 3,
            end_column: 5,
        },
    ],
    comments: [],
}
